[tool.poetry]
name = "new-project"
version = "1"
description = ""
authors = ["jaber <jaber.valinejad@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.3"
torch = "2.0.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.40"
dotenv = "^0.9.9"
redis = ">=5.0,<6.0"
llama-index = "^0.12.36"
sentence-transformers = "2.6.1"
openai = "^1.78.0"
streamlit = "^1.45.0"
llama-index-embeddings-huggingface = "<0.5.4"
langgraph = "^0.4.5"
langchain-openai = "^0.3.17"
langchain-core = "^0.3.60"
pydantic = "^2.11.4"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
numpy = "<2.0"
python-dotenv = "^1.1.0"
transformers = "4.39.3"
langchain = {extras = ["tracing"], version = "^0.3.25"}
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
